# defend

./: CHANGELOG.md  Cargo.toml  Containerfile.ubi  README.md  defend.xml  docker-compose.yml  flake.nix  rustfmt.toml
.github/workflows/: ci.yml
assets/: app.css  manifest.json
backend/: Cargo.toml
backend/src/: bootstrap.rs  config.rs  main.rs  metrics.rs  router.rs
backend/src/routes/: asset_manifest.rs  assets.rs  health.rs  leaderboard.rs  metrics_endpoint.rs  pwa_manifest.rs  redirect.rs
backend/src/routes/auth/: logout.rs  mod.rs  pin_required.rs  require_pin.rs  verify_pin.rs
backend/src/services/: mod.rs  paths.rs  rate_limit.rs  session.rs
backend/tests/: auth.rs  container_smoke.rs  edge_cases.rs  health.rs  leaderboard.rs  metrics.rs  origin_check.rs  rate_limit.rs  ready.rs
backend/tests/common/: mod.rs
frontend/: Cargo.toml  index.html  service-worker.js
frontend/Assets/: app.css
frontend/Assets/shared-assets/: README.md
frontend/src/: app.rs  main.rs  storage.rs
frontend/src/app/: update.rs  view.rs
frontend/src/app/handlers/: auth.rs  config.rs  mod.rs  system.rs  ui.rs
frontend/src/components/: defend_board.rs  defend_game.rs  defend_logic.rs  defend_overlay.rs  footer.rs  header.rs  mod.rs  pin.rs
frontend/src/i18n/: de.rs  en.rs  es.rs  fr.rs  ja.rs  pt.rs  ru.rs  zh.rs
