[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Axum backend service for Defend."
readme = "../README.md"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "sh"
path = "src/bin/sh.rs"

[dependencies]
shared-core = { git = "https://github.com/UberMetroid/shared-assets", tag = "v3.0.29" }
shared-backend = { git = "https://github.com/UberMetroid/shared-assets", tag = "v3.0.29" }
axum = { version = "0.8.15", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
time = { version = "0.3", default-features = false, features = ["std"] }
tower-http = { version = "0.7", features = ["fs", "trace", "limit"] }
dotenvy = "0.15"
cookie = "0.18"
axum-extra = { version = "0.12", features = ["cookie"] }
regex = "1.11"
tracing = "0.1"
tracing-subscriber = "0.3"
percent-encoding = "2.3"
sha2 = "0.11"
rand = "0.10"
thiserror = "2"
constant_time_eq = "0.5"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
